# TcmTui

./: .gitignore  Cargo.toml  readme.md
src/: app.rs  config.rs  database.rs  main.rs  utils.rs
src/components/: command.rs  footer.rs  help.rs  host.rs  mod.rs  proc.rs  query_input.rs  scroll_horizontal.rs  syntax_text.rs  tabs.rs  total_proc.rs
src/description/: deploy.rs  host.rs  mod.rs  proc.rs
src/event/: key.rs  mod.rs
src/tools/: deploy.rs  host.rs  mod.rs  proc.rs  search.rs
src/ui/: mod.rs  reflow.rs  scrollbar.rs
