[package]
name = "tcmhelper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntect = { version = "5.2.0" }
crossterm = { version = "0.27.0", features = ["event-stream"] } 
futures = "0.3.28" 
tokio = { version = "1.32.0", features = ["full"] } 
tokio-util = "0.7.9" 
hashbrown = "0.14.3"
itertools = "0.12.1"
lazy_static = "1.4.0"
quick-xml = { version = "0.31.0", features = ["serde-types", "serde", "serialize"] }
ratatui = "0.26.1"
serde = { version = "1.0.197", features = [ "derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.0", features = ["sqlite", "runtime-tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
color-eyre = "0.6.3"
anyhow = "1.0.82"
signal-hook = "0.3.17"
async-trait = "0.1.80"
strum = { version = "0.26.2", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
scopetime = "0.1.2"
two-face = "0.4.0"
once_cell = "1.19.0"
easy-cast = "0.5.2"
unicode-width = "0.1.11"
unicode-segmentation = "1.11"
unicode-truncate = "1.0"
infer = "0.15.0"